Fixed everything except nav covering menu

--- a/misc/about.html
+++ b/misc/about.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
-        <link rel="stylesheet" a href="css/stylesheet.css">
-        <style>
-            body{background:linen;}
-        </style>
+        <link rel="stylesheet" a href="../css/stylesheet.css">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
     </head>
-    <body style="background:linen">
+    <nav>
+        <h1>Welcome to our restaurant</h1>
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../index.html#menu">Menu</a></li>
+            <li>About</li>
+        </ul>
+    </nav>
+    <body>
+        <article>
+            <h1 class="h1-index">About us</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+        </article>
     </body>
 </html>
