Final version, cleaned up code

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <article>
             <h1 class="h1-index"><a id="menu">Menu</a></h1>
             <h2>Breakfast</h2>
-            <ul class="list_break">
-                <li>Sweet</li>
-                <li>Savory</li>
+            <ul>
+                <li class="list_break">Sweet</li>
+                <li class="list_break">Savory</li>
             </ul>
             <h2>Lunch</h2>
             <img class = "logo" src="images/bcit_logo.png" alt="Filler Picture">
